# aperta

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  __init__.py  calibration.py  geo_processing.py  osm_helpers.py  overhead.py  pyproject.toml  topography.py  visualization.py
.github/workflows/: test.yml
docs/: conf.py  index.md
docs/api/: accessibility.md  calibration.md  errors.md  geo_mapping.md  geo_processing.md  index.md  network_processing.md  od_pairs.md  osm_helpers.md  overhead.md  routing.md  topography.md  traffic_flows.md  utility.md  utils.md  visualization.md
examples/: README.md
examples/extended/: _benchmark.py  _benchmark_scipy.py  _figures.py  accessibility.ipynb  accessibility.py  benchmark.py  calibrate_edge_weights.ipynb  calibrate_edge_weights.py  road_stress.ipynb  road_stress.py  traffic_flows.ipynb  traffic_flows.py
examples/extended/coefficients/: edge_weights_and_overhead.bak.csv  edge_weights_and_overhead.csv  utility_coefficients.csv  utility_params_bak.csv
examples/extended/prepare/: 1_download.ipynb  1_download.py  2_dasymetric_employment.ipynb  2_dasymetric_employment.py  3_aggregate_to_cells.ipynb  3_aggregate_to_cells.py  3_unit_mapping.ipynb  3_unit_mapping.py  4_edge_weights.ipynb  4_edge_weights.py  4_topography.ipynb  4_topography.py  5_density.ipynb  5_density.py
examples/minimal/: accessibility.ipynb  accessibility.py
examples/quickstart/: quickstart.ipynb  quickstart.py
examples/walkthrough/: accessibility.ipynb  accessibility.py  jupytext.toml
src/aperta/: __init__.py  accessibility.py  calibration.py  errors.py  geo_mapping.py  geo_processing.py  geo_units.py  network_processing.py  od_pairs.py  osm_helpers.py  overhead.py  routing.py  table_processing.py  topography.py  traffic_flows.py  utility.py  utils.py  visualization.py
tests/: test_accessibility.py  test_calibration.py  test_geo_pairs.py  test_geo_processing.py  test_network_processing.py  test_od_pairs.py  test_osm_helpers.py  test_overhead.py  test_routing.py  test_traffic_flows.py  test_utility.py  test_visualization.py  test_workflow.py
