[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aperta"
version = "0.1.0a0"
description = "Python toolkit for cross-modal accessibility analysis on transport networks."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Marco Miotti", email = "marco@miotti.me"},
]
keywords = [
    "accessibility",
    "transport",
    "mobility",
    "urban",
    "routing",
    "networks",
    "gis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "geopandas>=1.0",
    "networkx>=3.0",        # input graph type; routing converts to scipy CSR
    "scipy>=1.10",          # routing (csgraph.dijkstra), KDTree, sparse matrices
    "statsmodels>=0.14",    # calibration.calibrate_edge_weights (OLS)
    "numba>=0.60",          # @njit hot loops in od_pairs + traffic_flows
    "matplotlib>=3.8",      # visualization module
]

# Optional feature extras. Core routing / accessibility / OD-pairs work
# on any networkx graph without any of these.
#
#   - `osm`: OSM-derived networks. `osmnx` covers all three uses in
#     aperta core:
#       * `osm_helpers.fetch_network` / `categorize_edges` — OSM downloads;
#       * `network_processing.consolidate_intersections` — wraps
#         `osmnx.consolidate_intersections` for OSMnx-output cleanup;
#       * `network_processing.load_consolidated_graphml` — graphml load
#         with custom-dtype casts.
#   - `topo`: `topography.fetch_copernicus_dem` + `geo_processing.
#     sample_raster_at_points` need `rasterio` (raster I/O) and `requests`
#     (DEM tile download).
#   - `h3`: `geo_processing.build_h3_grid` (and any other h3-based helper).
#   - `examples`: everything needed to run the example notebooks. Rolls up
#     the three domain extras + notebook tooling (`jupytext`), basemap
#     tiles (`contextily`), and Swiss-specific BFS PC-Axis parsing
#     (`pyaxis`).
#
# Install with `pip install 'aperta[osm]'` (or any other extra), or
# `pip install 'aperta[examples]'` for the full notebook environment.
[project.optional-dependencies]
osm = ["osmnx>=2.0"]
topo = ["rasterio>=1.3", "requests>=2.28"]
h3 = ["h3>=4.0"]
examples = [
    "aperta[osm]",
    "aperta[h3]",
    "jupytext>=1.16",
    "contextily>=1.4",
]
# Building the Sphinx docs site (read by .readthedocs.yaml).
docs = [
    "sphinx>=8.0",
    "furo>=2024.0",
    "myst-parser>=4.0",
]

# Src layout: package code lives under `src/aperta/`. Prevents accidental
# imports of the local source (Python won't find `aperta` unless it's
# actually `pip install`-ed), which catches "works on my machine but
# breaks when installed" bugs early.
[tool.setuptools.packages.find]
where = ["src"]

# mypy: static type checker. Loose initial config (non-strict mode) +
# escape hatches for libraries without type stubs. Tighten over time.
[tool.mypy]
python_version = "3.11"
files = ["src/aperta"]
# Common libraries without complete type stubs in this stack. Silences
# "no type stubs for X" errors without disabling type checking of our
# own code that uses them.
[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "geopandas.*",
    "shapely.*",
    "networkx.*",
    "scipy.*",
    "rasterio.*",
    "osmnx.*",
    "h3.*",
    "contextily.*",
    "matplotlib.*",
    "mpl_toolkits.*",
    "statsmodels.*",
    "numba.*",
    "pyaxis.*",
    "requests.*",
]
ignore_missing_imports = true

# Ruff: linter + formatter. Lenient initial config; extend rule sets
# (B, UP, SIM, ...) as the project matures.
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["examples/", "build/", "dist/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports, undefined names, etc.)
    "W",   # pycodestyle warnings
    "I",   # isort (import ordering)
]
# E501 (line too long) is handled by the formatter; allowing it here
# means the linter doesn't complain about strings/comments that the
# formatter chose not to break.
ignore = ["E501"]
